plugins {
    id 'java'
    id 'war'
    id 'org.springframework.boot' version '3.3.6' apply false
    id 'io.spring.dependency-management' version '1.1.7' apply false
    id 'org.graalvm.buildtools.native' version '0.11.5' apply false
    id 'jacoco'
}

import org.gradle.testing.jacoco.tasks.JacocoReport

repositories {
    mavenCentral()
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'war'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'
    apply plugin: 'org.graalvm.buildtools.native'
    apply plugin: 'jacoco'

    group = 'com.order'
    version = '0.0.1-SNAPSHOT'

    def excludedPatterns = [
            "**/*.dto.*",
            "**/*.entity.*",
            "**/*.config.*",
            "**/*Application.class",
            "**/dto/**",
            "**/entity/**",
            "**/config/**",
            "**/*Application.java"
    ]

    java {
        sourceCompatibility = JavaVersion.VERSION_21
        targetCompatibility = JavaVersion.VERSION_21
    }

    repositories {
        mavenCentral()
    }

    jacoco {
        toolVersion = '0.8.12'
    }

    dependencies {
        implementation 'org.springframework.data:spring-data-commons'
        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
        implementation 'org.flywaydb:flyway-core'
        implementation 'org.springframework.boot:spring-boot-starter-security'
        implementation 'org.springframework.boot:spring-boot-starter-validation'
        implementation 'org.flywaydb:flyway-database-postgresql'
        implementation 'org.springframework.boot:spring-boot-starter-actuator'

        compileOnly 'org.projectlombok:lombok'
        implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
        annotationProcessor 'org.projectlombok:lombok'
        annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
        developmentOnly 'org.springframework.boot:spring-boot-devtools'

        runtimeOnly 'org.postgresql:postgresql'
        runtimeOnly 'com.h2database:h2'
        providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'

        testImplementation 'org.springframework.boot:spring-boot-starter-test'
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    }

    tasks.named('test') {
        useJUnitPlatform()
        finalizedBy tasks.named('jacocoTestReport')
    }

    tasks.matching {
        it.name in ['processTestAot', 'compileAotTestJava', 'processAotTestResources']
    }.configureEach {
        enabled = false
    }

    tasks.named('jacocoTestReport') {
        dependsOn tasks.named('test')
        classDirectories.setFrom(provider {
            sourceSets.main.output.classesDirs.asFileTree.matching {
                exclude excludedPatterns
            }
        })
        reports {
            xml.required = true
            html.required = true
        }
    }

    tasks.named('jacocoTestCoverageVerification') {
        dependsOn tasks.named('jacocoTestReport')
        classDirectories.setFrom(provider {
            sourceSets.main.output.classesDirs.asFileTree.matching {
                exclude excludedPatterns
            }
        })
        violationRules {
            rule {
                limit {
                    minimum = 0.7
                }
            }
        }
    }

    tasks.named('check') {
        dependsOn tasks.named('jacocoTestCoverageVerification')
    }

    graalvmNative {
        toolchainDetection = false
        binaries {
            main {
                buildArgs.add("--enable-preview")
            }
        }
    }
}

def aggregateExcludedPatterns = [
        '**/*.dto.*',
        '**/*.entity.*',
        '**/*.config.*',
        '**/*Application.class',
        '**/*Application.java',
        '**/dto/**',
        '**/entity/**',
        '**/config/**'
]

tasks.register('aggregateJacocoReport', JacocoReport) {
    dependsOn(subprojects.collect { it.tasks.named('test') })
    executionData.from(fileTree(rootDir).include(
            'api-01-auth-gateway/build/jacoco/test.exec',
            'api-02-orders-crud/build/jacoco/test.exec'
    ))

    classDirectories.setFrom(files(subprojects.collect { project ->
        fileTree(dir: "${project.layout.buildDirectory.get().asFile}/classes/java/main", exclude: aggregateExcludedPatterns)
    }))

    sourceDirectories.setFrom(files(subprojects.collect { project ->
        project.sourceSets.main.allSource.srcDirs
    }))

    additionalSourceDirs.setFrom(sourceDirectories)

    reports {
        html.required = true
        xml.required = true
        csv.required = false
        html.outputLocation = layout.buildDirectory.dir('reports/jacoco/aggregateJacocoReport')
        xml.outputLocation = layout.buildDirectory.file('reports/jacoco/aggregateJacocoReport.xml')
    }
}

tasks.register('aggregateJavadoc', Javadoc) {
    dependsOn(subprojects.collect { it.tasks.named('classes') })
    source(subprojects.collect { it.sourceSets.main.allJava })
    classpath = files(subprojects.collect { it.sourceSets.main.compileClasspath })
    destinationDir = layout.buildDirectory.dir('docs/aggregated-javadoc').get().asFile
    options.encoding = 'UTF-8'
    options.charSet = 'UTF-8'
    options.memberLevel = JavadocMemberLevel.PROTECTED
}
